2013-10-13    <larus@IC-LMC-ICDO-01>

	* QtSpim/main.cpp, QtSpim/QtSpim.pro, QtSpim/spim_support.c
	[https://sourceforge.net/p/spimsimulator/bugs/47]
	[https://sourceforge.net/p/spimsimulator/bugs/48]:
	Port QtSpim to Qt 5.1.

2013-07-20    <JIM@LS-RED>

	* QtSpim/help/HP_AppA.html [Matthias Herlich herlich@upb.de]:
	Definition of caller/callee saved registers reversed!

2013-06-02    <JIM@LS-RED>

	* CPU/inst.c (format_an_inst) [Daniel Chester <chester@mail.eecis.udel.edu>]:
	FP compare (e.g. c.eq.s) instructions ignored condition flag
	numbers. The FP move (e.g. movt.s) instructions did not default
	condition flag.

2013-03-23    <JIM@LS-RED>

	* CPU/data.c (extern_directive) [https://sourceforge.net/p/spimsimulator/bugs/44/]:
	Multiple instance of extern directive resolved to distinct locations.

	* CPU/inst.c (i_type_inst_full_word) [https://sourceforge.net/p/spimsimulator/feature-requests/11/]:
	LW/SW of 0x8000..0xffff generated incorrect code.

2013-01-19    <JIM@LS-RED>

	* CPU/version.h: 
	Version 9.1.9

	* helloworld.s [https://sourceforge.net/p/spimsimulator/feature-requests/8/]:
	Added hello world example

2013-01-06    <JIM@LS-RED>

	* spimview.cpp, console.cpp [http://sourceforge.net/p/spimsimulator/feature-requests/9/]:
	Use fixed width font for spim output to line up colums properly

2012-12-16    <JIM@LS-RED>

	* QtSpim/QtSpim.pro [sourceforge #37: https://sourceforge.net/u/smeenai/]:
	Fix flex output file argument specification.
	Include optional defines for using Win move and del commands.

2012-12-09    <Jim@X64PC>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.8

	* CPU/scanner.l [Tom Murphy wolfmurphy@gmail.com]:
	Overwrote first digit in \ooo escape sequence in string.

	* CPU/inst.c (i_type_inst) [Tom Murphy wolfmurphy@gmail.com]:
	Crashed at teqi instruction.

2012-10-21    <Jim@X64PC>

	* QtSpim/main.cpp (parseCommandLine): 
	Allow multiple input files on the command line.

	* QtSpim/console.cpp (WriteOutput):